# Dialogflow_API

./: LICENSE  README.md
python-micro-service-master/: Pipfile  README.md  setup.cfg  setup.py
python-micro-service-master/src/delivery/api/microservice/: InspirationalQuote-dc8da3808508.json  __init__.py
python-micro-service-master/src/delivery/api/microservice/dialogflow/: detect_intent_stream.py  handle_data.py  manage_responses.py  writef.py
python-micro-service-master/src/python_micro_service.egg-info/: requires.txt
vuejs-client-master/: .gitignore  Dockerfile  Makefile  README.md  package.json  tslint.json  vue.config.js
vuejs-client-master/public/: index.html
vuejs-client-master/src/: App.vue  bus.ts  config.ts  main.ts  shims-modules.d.ts
vuejs-client-master/src/components/: QuestionBox.vue  Recorder.vue
