[metadata]
name = python-micro-service
version = file: VERSION
description = Bootstrap for python micro-services
long_description = file: README.md
author = João Nuno
author_email = joao@elsanow.io
url = https://gitlab.com/elsacorp/bootstraps/python-micro-service
keywords = bootstrap, python
license = ELSA property
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
# scripts =
#   bin/service
#   bin/other-script

[options.packages.find]
where=src
#exclude =
#    src.will_not_install

#[options.data_files]
#/template-django-server=
#    VERSION
